--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fofmbarros/express-logger",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Plug and play Express.js request and response middleware",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
@@ -16,6 +16,9 @@
     }
   },
   "type": "module",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "compile": "tsc --noEmit",
     "lint": "eslint",
